k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-server
  labels:
    app: simple-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-server
  template:
    metadata:
      labels:
        app: simple-server
    spec:
      nodeSelector:
        node-type: small
      imagePullSecrets:
        - name: regcred
      containers:
        - name: simple-server
          image: supruniukmaksym/simple-server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
