k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-server-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: simple.student1.devops7.dev.eugenich.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simple-server-service
                port:
                  number: 80
